--- a/PROXY/squid/squid.conf
+++ b/PROXY/squid/squid.conf
@@ -32,7 +32,7 @@ http_access deny siteblacklist
 #auth_param basic credentialsttl 2 hours
 #acl password proxy_auth REQUIRED
 http_access allow localhost
-http_access allow password
+#http_access allow password
 http_access deny all
 
 forwarded_for off
