--- a/PROXY/squid/nopass/squid.conf
+++ b/PROXY/squid/nopass/squid.conf
@@ -16,6 +16,7 @@ http_access allow localhost manager
 http_access deny manager
 include /etc/squid/conf.d/*
 http_access allow localhost
+http_access allow localnet
 http_access deny all
 coredump_dir /var/spool/squid
 refresh_pattern ^ftp:           1440    20%     10080
