--- a/PROXY/squid/nopass/squid.conf
+++ b/PROXY/squid/nopass/squid.conf
@@ -1,4 +1,4 @@
-http_port 3128
+http_port 3128 transparent
 acl Safe_ports port 1-65535  # all ports
 acl localnet src 0.0.0.1-0.255.255.255  # RFC 1122 "this" network (LAN)
 acl localnet src 10.0.0.0/8             # RFC 1918 local private network (LAN)
