--- a/PROXY/squid/nopass/squid.conf
+++ b/PROXY/squid/nopass/squid.conf
@@ -9,9 +9,9 @@ acl localnet src 192.168.0.0/16         # RFC 1918 local private network (LAN)
 acl localnet src fc00::/7               # RFC 4193 local private network range
 acl localnet src fe80::/10              # RFC 4291 link-local (directly plugged) machines
 acl SSL_ports port 443
-acl CONNECT method CONNECT
+#acl CONNECT method CONNECT
 #http_access deny !Safe_ports
-http_access deny CONNECT !SSL_ports
+#http_access deny CONNECT !SSL_ports
 http_access allow localhost manager
 http_access deny manager
 #include /etc/squid/conf.d/*
