--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -26,6 +26,8 @@ icp_access deny all
 htcp_access deny all
 
 http_port 3128
+#multiple port
+#http_port 3128
 hierarchy_stoplist cgi-bin ?
 access_log /var/log/squid/access.log squid
 
