--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -27,7 +27,7 @@ htcp_access deny all
 
 http_port 3128
 #multiple port
-#http_port 3128
+http_port 8080
 hierarchy_stoplist cgi-bin ?
 access_log /var/log/squid/access.log squid
 
