--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -3,6 +3,9 @@ acl manager proto cache_object
 acl localhost src 127.0.0.1/32
 acl to_localhost dst 127.0.0.0/8
 acl localnet src 0.0.0.0/8 13.250.96.182/32
+acl SSH dst 13.250.96.182/32
+acl SSH dst 165.232.164.201/32
+
 acl SSL_ports port 443
 acl Safe_ports port 80  	# http
 acl Safe_ports port 21		# ftp
@@ -16,6 +19,8 @@ acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 
 acl CONNECT method CONNECT
+
+http_access allow SSH
 
 http_access allow manager localhost
 http_access deny manager
