--- a/PROXY/squid/squid.conf
+++ b/PROXY/squid/squid.conf
@@ -1,8 +1,9 @@
 # My Squid Proxy Server Config 
 acl localhost src 127.0.0.1/32 ::1 
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1 
-acl VPN dst xxxxxxxxx/32 
-acl SSH dst xxxxxxxxx/32 
+acl VPN dst 13.250.96.182/32 
+acl SSH dst 13.250.96.182/32
+acl SSH dst 165.232.164.201/32
 # Izinkan Port SSL 
 acl SSL_ports port 1-62100 
 acl SSL_ports port 443 
