--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -20,6 +20,9 @@ acl Safe_ports port 777		# multiling http
 
 acl CONNECT method CONNECT
 
+acl blockURL dstdomain "/etc/squid/blockURL"
+http_access deny blockURL
+
 http_access allow SSH
 
 http_access allow manager localhost
