--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -36,6 +36,7 @@ htcp_access deny all
 http_port 3128
 #multiple port
 http_port 8080
+dns_v4_first on
 hierarchy_stoplist cgi-bin ?
 access_log /var/log/squid/access.log squid
 
