--- a/sslh/sslh.conf
+++ b/sslh/sslh.conf
@@ -15,4 +15,6 @@ RUN=yes
 # systemd users: don't forget to modify /lib/systemd/system/sslh.service
 DAEMON=/usr/sbin/sslh
 
-DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:5222 --openvpn 127.0.0.1:1194 --http 127.0.0.1:8880 --pidfile /var/run/sslh/sslh.pid"
+#DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --openvpn 127.0.0.1:1194 --http 127.0.0.1:8880 --pidfile /var/run/sslh/sslh.pid"
+
+DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --pidfile /var/run/sslh/sslh.pid"
