--- a/SSH/stunel4/stunnel.conf
+++ b/SSH/stunel4/stunnel.conf
@@ -5,10 +5,18 @@ socket = l:TCP_NODELAY=1
 socket = r:TCP_NODELAY=1
 TIMEOUTclose = 0
 
-[dropbear]
+[dropbear1]
 accept = 955
 connect = 127.0.0.1:23
 
-[openssh]
-accept = 1443
+[dropbear2]
+accept = 465
+connect = 127.0.0.1:23
+
+[openssh1]
+accept = 944
+connect = 127.0.0.1:22
+
+[openssh2]
+accept = 587
 connect = 127.0.0.1:22
