--- a/PROXY/shock/danted.conf
+++ b/PROXY/shock/danted.conf
@@ -3,8 +3,7 @@
 logoutput: syslog
 user.privileged: root
 user.unprivileged: nobody
-# desired proxy ports may differ, used here: POP3 110, IMAP 143, 
-# HTTPS 443
+# desired proxy ports may differ, used here: POP3 110, IMAP 143, HTTPS 443
 internal: 0.0.0.0 port = 110
 internal: 0.0.0.0 port = 143
 internal: 0.0.0.0 port = 443
@@ -12,8 +11,7 @@ internal: 0.0.0.0 port = 1080
 # interface name may differ, use `ip a` command and copy non-lo 
 # interface:
 external: eth0
-# set socksmethod to 'none' instead of 'username' if you want to 
-# disable auth.
+# set socksmethod to 'none' instead of 'username' if you want to disable auth.
 socksmethod: none
 clientmethod: none
 user.libwrap: nobody 
