--- a/PROXY/shock/danted.conf
+++ b/PROXY/shock/danted.conf
@@ -3,10 +3,7 @@
 logoutput: syslog
 user.privileged: root
 user.unprivileged: nobody
-# desired proxy ports may differ, used here: POP3 110, IMAP 143, HTTPS 443
-internal: 0.0.0.0 port = 110
-internal: 0.0.0.0 port = 143
-internal: 0.0.0.0 port = 443
+# desired proxy ports may differ, used here: 1080
 internal: 0.0.0.0 port = 1080
 # interface name may differ, use `ip a` command and copy non-lo 
 # interface:
@@ -22,5 +19,6 @@ client pass {
 socks pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
+        protocol: tcp udp
 }
 # end of config
