--- a/coba/ws-http.service
+++ b/coba/ws-http.service
@@ -1,6 +1,6 @@
 [Unit]
-Description=HTTP SSH Over Websocket Python HideSSH
-Documentation=https://hidessh.com
+Description=HTTP SSH Over Websocket Python
+Documentation=https://github.com/lamtota40
 After=network.target nss-lookup.target
 
 [Service]
