--- a/PROXY/shock/danted.conf
+++ b/PROXY/shock/danted.conf
@@ -9,7 +9,7 @@ internal: 0.0.0.0 port = 1080
 # interface:
 external: eth0
 # set socksmethod to 'none' instead of 'username' if you want to disable auth.
-socksmethod: none
+socksmethod: username
 clientmethod: none
 user.libwrap: nobody 
 client pass {
