--- a/sslh/sslh.conf
+++ b/sslh/sslh.conf
@@ -16,6 +16,6 @@ RUN=yes
 # support --ssh --ssl --tls --openvpn --http -xmpp --tnc --anyprot
 DAEMON=/usr/sbin/sslh
 
-#DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --openvpn 127.0.0.1:1194 --http 127.0.0.1:8880 --pidfile /var/run/sslh/sslh.pid"
+DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --openvpn 127.0.0.1:1194 --http 127.0.0.1:80 --pidfile /var/run/sslh/sslh.pid"
 
-DAEMON_OPTS="--user sslh --listen 0.0.0.0:5222 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --pidfile /var/run/sslh/sslh.pid"
+#DAEMON_OPTS="--user sslh --listen 0.0.0.0:5222 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --pidfile /var/run/sslh/sslh.pid"
