--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -9,6 +9,7 @@ acl SSH dst 165.232.164.201/32
 acl SSL_ports port 443
 acl Safe_ports port 80  	# http
 acl Safe_ports port 21		# ftp
+acl Safe_ports port 22		# ssh
 acl Safe_ports port 443		# https
 acl Safe_ports port 70		# gopher
 acl Safe_ports port 210		# wais
