--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -34,6 +34,11 @@ http_access deny to_localhost
 icp_access deny all
 htcp_access deny all
 
+# forwarded_for transparent
+#forwarded_for delete
+#via off
+
+
 http_port 3128
 #multiple port
 http_port 8080
