--- a/PROXY/squid/squid-pass.conf
+++ b/PROXY/squid/squid-pass.conf
@@ -1,5 +1,5 @@
 auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
-auth_param basic credentialsttl 30 minutes
+#auth_param basic credentialsttl 30 minutes
 auth_param basic casesensitive on
 acl manager proto cache_object
 acl localhost src 127.0.0.1/32 ::1
