--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -20,27 +20,30 @@ acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 
 acl CONNECT method CONNECT
+acl GET method GET
+acl POST method POST
 
 acl blockURL dstdomain "/etc/squid/blockURL"
-http_access deny blockURL
 
 http_access allow SSH
-
 http_access allow manager localhost
+
 http_access deny manager
 http_access deny !Safe_ports
-
 http_access deny to_localhost
+http_access deny GET
+http_access deny POST
+http_access deny blockURL
+
 icp_access deny all
 htcp_access deny all
 
-# forwarded_for transparent
+#forwarded_for transparent
 #forwarded_for delete
 #via off
 
-
 http_port 3128
-#multiple port
+#extra port
 http_port 8080
 dns_v4_first on
 hierarchy_stoplist cgi-bin ?
