--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -6,18 +6,18 @@ acl localnet src 0.0.0.0/8 13.250.96.182/32
 acl SSH dst 3.1.58.120/32
 acl SSH dst 128.199.209.181/32
 
-acl SSL_ports port 443
-acl Safe_ports port 80  	# http
-acl Safe_ports port 21		# ftp
-acl Safe_ports port 22		# ssh
-acl Safe_ports port 443		# https
-acl Safe_ports port 70		# gopher
-acl Safe_ports port 210		# wais
-acl Safe_ports port 1025-65535	# unregistered ports
-acl Safe_ports port 280		# http-mgmt
-acl Safe_ports port 488		# gss-http
-acl Safe_ports port 591		# filemaker
-acl Safe_ports port 777		# multiling http
+acl Safe_ports port 1-65535	# all ports
+#acl SSL_ports port 443
+#acl Safe_ports port 80  	# http
+#acl Safe_ports port 21		# ftp
+#acl Safe_ports port 22		# ssh
+#acl Safe_ports port 443		# https
+#acl Safe_ports port 70		# gopher
+#acl Safe_ports port 210		# wais
+#acl Safe_ports port 280		# http-mgmt
+#acl Safe_ports port 488		# gss-http
+#acl Safe_ports port 591		# filemaker
+#acl Safe_ports port 777		# multiling http
 
 acl CONNECT method CONNECT
 acl GET method GET
