--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -4,7 +4,7 @@ acl localhost src 127.0.0.1/32
 acl to_localhost dst 127.0.0.0/8
 acl localnet src 0.0.0.0/8 13.250.96.182/32
 acl SSH dst 3.1.58.120/32
-acl SSH dst 128.199.209.181/32
+#acl SSH dst 128.199.209.181/32
 
 acl Safe_ports port 1-65535	# all ports
 #acl SSL_ports port 443
