--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -7,7 +7,7 @@ acl SSH dst 3.1.58.120/32
 #acl SSH dst 128.199.209.181/32
 
 acl Safe_ports port 1-65535	# all ports
-#acl SSL_ports port 443
+acl SSL_ports port 443
 #acl Safe_ports port 80  	# http
 #acl Safe_ports port 21		# ftp
 #acl Safe_ports port 22		# ssh
