--- a/PROXY/squid/all-squid.conf
+++ b/PROXY/squid/all-squid.conf
@@ -31,8 +31,8 @@ http_access allow manager localhost
 http_access deny manager
 http_access deny !Safe_ports
 http_access deny to_localhost
-http_access deny GET
-http_access deny POST
+#http_access deny GET
+#http_access deny POST
 http_access deny blockURL
 
 icp_access deny all
