--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -2,4 +2,9 @@ cache deny all
 http_port 3128
 #extra port
 http_port 8080
+
 acl blockURL dstdomain "/etc/squid/blockURL"
+http_access deny blockURL
+
+# Allow all machines to all sites
+http_access allow all
