--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -1,11 +1,13 @@
-acl localhost src 127.0.0.1/32
-acl to_localhost dst 127.0.0.0/8
-acl localnet src 0.0.0.0/8 13.250.96.182/32
-
 cache deny all
 http_port 3128
 #extra port
 http_port 8080
+
+acl localhost src 127.0.0.1/32
+acl to_localhost dst 127.0.0.0/8
+acl localnet src 0.0.0.0/8 13.250.96.182/32
+
+acl CONNECT method CONNECT
 
 acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny blockURL
