--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -6,11 +6,20 @@ http_port 8080
 acl localhost src 127.0.0.1/32
 acl to_localhost dst 127.0.0.0/8
 acl localnet src 0.0.0.0/8 13.250.96.182/32
+dns_v4_first on
+
+acl Safe_ports port 1-65535	# all ports
+acl SSL_ports port 443
 
 acl CONNECT method CONNECT
 
+http_access deny !Safe_ports
+http_access deny !SSL_ports
+
 acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny blockURL
+
+access_log /var/log/squid/access.log squid
 
 # Allow all machines to all sites
 http_access allow all
