--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -9,7 +9,7 @@ acl localnet src 0.0.0.0/8 13.250.96.182/32
 dns_v4_first on
 
 acl Safe_ports port 1-65535	# all ports
-acl SSL_ports port 443
+acl SSL_ports port 1-65535	# all ports
 
 acl CONNECT method CONNECT
 
