--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -9,14 +9,14 @@ acl localnet src 0.0.0.0/8 3.1.58.120/32
 dns_v4_first on
 
 acl Safe_ports port 1-65535	# all ports
-acl SSL_ports port 1-65535	# all ports
+#acl SSL_ports port 1-65535	# all ports
 http_access allow all
 
 acl CONNECT method CONNECT
 
 acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny !Safe_ports
-http_access deny !SSL_ports
+#http_access deny !SSL_ports
 http_access deny blockURL
 
 access_log /var/log/squid/access.log squid
