--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -13,6 +13,9 @@ acl Safe_ports port 1-65535	# all ports
 http_access allow all
 
 acl CONNECT method CONNECT
+forwarded_for transparent
+forwarded_for delete
+via off
 
 acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny !Safe_ports
