--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -21,6 +21,8 @@ acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny !Safe_ports
 #http_access deny !SSL_ports
 http_access deny blockURL
+http_access deny all
+
 
 access_log /var/log/squid/access.log squid
 
