--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -23,7 +23,9 @@ http_access deny !Safe_ports
 http_access deny blockURL
 http_access deny all
 
-
 access_log /var/log/squid/access.log squid
 
-
+auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+auth_param basic realm proxy
+acl authenticated proxy_auth REQUIRED
+http_access allow authenticated
