--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -13,7 +13,7 @@ http_access allow all
 
 acl CONNECT method CONNECT
 dns_v4_first on
-forwarded_for transparent
+#forwarded_for transparent
 forwarded_for delete
 via off
 
@@ -25,9 +25,35 @@ http_access deny all
 
 access_log /var/log/squid/access.log squid
 
-auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
-auth_param basic realm proxy
-acl authenticated proxy_auth REQUIRED
-http_access allow authenticated
+#auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+#auth_param basic realm proxy
+#acl authenticated proxy_auth REQUIRED
+#http_access allow authenticated
 #apt install apache2-utils
 #htpasswd -c /etc/squid/passwords userxxx
+
+header_access Allow allow all
+header_access Authorization allow all
+header_access Cache-Control allow all
+header_access Content-Encoding allow all
+header_access Content-Length allow all
+header_access Content-Type allow all
+header_access Date allow all
+header_access Expires allow all
+header_access Host allow all
+header_access If-Modified-Since allow all
+header_access Last-Modified allow all
+header_access Location allow all
+header_access Pragma allow all
+header_access Accept allow all
+header_access Accept-Enncoding allow all
+header_access Accept-Language allow all
+header_access Content-Language allow all
+header_access Mime-Version allow all
+header_access Cookie allow all
+header_access Set_Cookie allow all
+header_access Retry-After allow all
+header_access Title allow all
+header_access Connection allow all
+header_access Proxy-Connection allow all
+header_access All deny all
