--- a/PROXY/squid/bagus-squid.conf
+++ b/PROXY/squid/bagus-squid.conf
@@ -32,6 +32,7 @@ access_log /var/log/squid/access.log squid
 #apt install apache2-utils
 #htpasswd -c /etc/squid/passwords userxxx
 
+#for anonymous hide use proxy
 header_access Allow allow all
 header_access Authorization allow all
 header_access Cache-Control allow all
