--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -1,10 +1,11 @@
+#authenticated
 auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
 auth_param basic casesensitive on
 acl authenticated_users proxy_auth REQUIRED
 http_access allow authenticated_users
 
+#port and extra port
 http_port 3128
-#extra port
 #http_port 8080
 
 acl manager proto cache_object
@@ -21,12 +22,14 @@ http_access allow manager localhost
 http_access allow localhost
 http_access deny !Safe_ports
 
+#block url
 acl blockURL dstdomain "/etc/squid/blockURL"
 http_access deny blockURL
 
 cache deny all
 http_access deny all
 
+#log
 access_log /var/log/squid/access.log squid
 
 #for anonymous hide use proxy
