--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -1,4 +1,6 @@
 #authenticated
+###apt install apache2-utils
+###htpasswd -c /etc/squid/passwords userxxx
 auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
 auth_param basic casesensitive on
 acl authenticated_users proxy_auth REQUIRED
