--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -1,13 +1,13 @@
 #authenticated
 ###apt install apache2-utils
 ###htpasswd -c /etc/squid/passwords userxxx
-auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
-auth_param basic casesensitive on
-acl authenticated_users proxy_auth REQUIRED
-http_access allow authenticated_users
+#auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+#auth_param basic casesensitive on
+#acl authenticated_users proxy_auth REQUIRED
+#http_access allow authenticated_users
 
 #port and extra port
-http_port 3128
+http_port 4545
 #http_port 8080
 
 acl manager proto cache_object
