--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -5,6 +5,7 @@
 #auth_param basic casesensitive on
 #acl authenticated_users proxy_auth REQUIRED
 #http_access allow authenticated_users
+http_access allow all
 
 #port and extra port
 http_port 4545
