--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -26,7 +26,7 @@ http_access allow localhost
 http_access deny !Safe_ports
 
 #block url
-acl blockURL dstdomain "/etc/squid/blockURL"
+acl blockURL dstdomain "/etc/squid/blockURL.txt"
 http_access deny blockURL
 
 cache deny all
