--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -1,13 +1,15 @@
-#authenticated
+###authenticated
 ###apt install apache2-utils
 ###htpasswd -c /etc/squid/passwords userxxx
+###delete "http_access allow all"
 #auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
 #auth_param basic casesensitive on
 #acl authenticated_users proxy_auth REQUIRED
 #http_access allow authenticated_users
+
 http_access allow all
 
-#port and extra port
+###port and extra port
 http_port 4545
 #http_port 8080
 
@@ -25,17 +27,17 @@ http_access allow manager localhost
 http_access allow localhost
 http_access deny !Safe_ports
 
-#block url
+###block url
 acl blockURL dstdomain "/etc/squid/blockURL.txt"
 http_access deny blockURL
 
 cache deny all
 http_access deny all
 
-#log
+###log
 access_log /var/log/squid/access.log squid
 
-#for anonymous hide use proxy
+###for anonymous hide use proxy
 forwarded_for delete
 via off
 header_access Allow allow all
@@ -65,32 +67,32 @@ header_access Proxy-Connection allow all
 header_access All deny all
 
 ### HTTP Anonymizer Paranoid 
-reply_header_access Allow allow all 
-reply_header_access Authorization allow all
-reply_header_access WWW-Authenticate allow all 
-reply_header_access Proxy-Authorization allow all 
-reply_header_access Proxy-Authenticate allow all 
-reply_header_access Cache-Control allow all 
-reply_header_access Content-Encoding allow all 
-reply_header_access Content-Length allow all
-reply_header_access Content-Type allow all 
-reply_header_access Date allow all 
-reply_header_access Expires allow all 
-reply_header_access Host allow all 
-reply_header_access If-Modified-Since allow all 
-reply_header_access Last-Modified allow all 
-reply_header_access Location allow all 
-reply_header_access Pragma allow all 
-reply_header_access Accept allow all 
-reply_header_access Accept-Charset allow all 
-reply_header_access Accept-Encoding allow all 
-reply_header_access Accept-Language allow all 
-reply_header_access Content-Language allow all
-reply_header_access Mime-Version allow all
-reply_header_access Retry-After allow all 
-reply_header_access Title allow all 
-reply_header_access Connection allow all 
-reply_header_access Proxy-Connection allow all 
-reply_header_access User-Agent allow all 
-reply_header_access Cookie allow all 
-reply_header_access All deny all
+#reply_header_access Allow allow all 
+#reply_header_access Authorization allow all
+#reply_header_access WWW-Authenticate allow all 
+#reply_header_access Proxy-Authorization allow all 
+#reply_header_access Proxy-Authenticate allow all 
+#reply_header_access Cache-Control allow all 
+#reply_header_access Content-Encoding allow all 
+#reply_header_access Content-Length allow all
+#reply_header_access Content-Type allow all 
+#reply_header_access Date allow all 
+#reply_header_access Expires allow all 
+#reply_header_access Host allow all 
+#reply_header_access If-Modified-Since allow all 
+#reply_header_access Last-Modified allow all 
+#reply_header_access Location allow all 
+#reply_header_access Pragma allow all 
+#reply_header_access Accept allow all 
+#reply_header_access Accept-Charset allow all 
+#reply_header_access Accept-Encoding allow all 
+#reply_header_access Accept-Language allow all 
+#reply_header_access Content-Language allow all
+#reply_header_access Mime-Version allow all
+#reply_header_access Retry-After allow all 
+#reply_header_access Title allow all 
+#reply_header_access Connection allow all 
+#reply_header_access Proxy-Connection allow all 
+#reply_header_access User-Agent allow all 
+#reply_header_access Cookie allow all 
+#reply_header_access All deny all
