--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -1,4 +1,4 @@
-###authenticated
+###for use authenticated
 ###apt install apache2-utils
 ###htpasswd -c /etc/squid/passwords userxxx
 ###delete "http_access allow all"
