--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -22,6 +22,7 @@ acl Safe_ports port 1-65535	# all ports
 
 acl CONNECT method CONNECT
 dns_v4_first on
+visible_hostname yourip
 
 http_access allow manager localhost
 http_access allow localhost
