--- a/PROXY/squid/sempurna.squid.conf
+++ b/PROXY/squid/sempurna.squid.conf
@@ -2,12 +2,13 @@
 ###apt install apache2-utils
 ###htpasswd -c /etc/squid/passwords userxxx
 ###delete "http_access allow all"
-#auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
-#auth_param basic casesensitive on
-#acl authenticated_users proxy_auth REQUIRED
-#http_access allow authenticated_users
 
-http_access allow all
+auth_param basic program /usr/lib/squid/basic_ncsa_auth /etc/squid/passwords
+auth_param basic casesensitive on
+acl authenticated_users proxy_auth REQUIRED
+http_access allow authenticated_users
+
+#http_access allow all
 
 ###port and extra port
 http_port 4545
