--- a/PROXY/shock/danted.conf
+++ b/PROXY/shock/danted.conf
@@ -3,12 +3,12 @@ logoutput: syslog
 user.privileged: root
 user.unprivileged: nobody
 # desired proxy ports may differ, used here: 1080
-internal: 0.0.0.0 port = 25000
+internal: 0.0.0.0 port = 1080
 # interface name may differ, use `ip a` command and copy non-lo 
 # interface:
 external: eth0
 # set socksmethod to 'none' instead of 'username' if you want to disable auth.
-socksmethod: none
+socksmethod: username
 clientmethod: none
 user.libwrap: nobody 
 client pass {
@@ -18,6 +18,6 @@ client pass {
 socks pass {
         from: 0.0.0.0/0 to: 0.0.0.0/0
         log: connect disconnect error
-        protocol: udp
+        protocol: tcp udp
 }
 # end of config
