--- a/PROXY/socks/danted.conf
+++ b/PROXY/socks/danted.conf
@@ -8,7 +8,7 @@ internal: 0.0.0.0 port = 1080
 # interface:
 external: eth0
 # set socksmethod to 'none' instead of 'username' if you want to disable auth.
-socksmethod: username
+socksmethod: none
 clientmethod: none
 user.libwrap: nobody 
 client pass {
