--- a/UDPcustom/config.json
+++ b/UDPcustom/config.json
@@ -6,4 +6,13 @@
     "mode": "passwords",
     "pass": ["qwerty"]
   }
+},
+{
+  "stream_buffer": 33554432,
+  "receive_buffer": 83886080,
+  "user": "melon",
+  "auth": {
+    "mode": "passwords",
+    "pass": ["merah"]
+  }
 }
