--- a/UDPcustom/config.json
+++ b/UDPcustom/config.json
@@ -1,18 +1,26 @@
 {
   "stream_buffer": 33554432,
   "receive_buffer": 83886080,
-  "user": "master",
+  "user": "global",
   "auth": {
     "mode": "passwords",
-    "pass": ["qwerty"]
-  }
-},
-{
-  "stream_buffer": 33554432,
-  "receive_buffer": 83886080,
-  "user": "melon",
-  "auth": {
-    "mode": "passwords",
-    "pass": ["merah"]
+    "pass": [
+//data
+//elcoba 2023-05-17
+"elcoba", 
+//hehehe 2023-04-27
+"hehehe", 
+//whatt 2023-04-27
+"whatt", 
+//arnold3 2023-04-27
+"arnold3", 
+//aginkontol 2023-04-26
+"aginkontol", 
+//tester 2023-04-26
+"tester", 
+//trial 2023-04-26
+"trial", 
+"vps",
+"udp"]
   }
 }
