--- a/UDPcustom/config.json
+++ b/UDPcustom/config.json
@@ -1,7 +1,7 @@
 {
   "stream_buffer": 33554432,
   "receive_buffer": 83886080,
-  "user": "global",
+  "user": "udp",
   "auth": {
     "mode": "passwords",
     "pass": [
