--- a/UDPcustom/config.json
+++ b/UDPcustom/config.json
@@ -1,9 +1,5 @@
 {
-  "stream_buffer": 33554432,
-  "receive_buffer": 83886080,
-  "user": "epro",
+  "listen": ":36712",
   "auth": {
-    "mode": "passwords",
-    "pass": ["dev", "team"]
-  }
-}
+    "mode": "passwords"
+ }
