--- a/sslh/sslh.conf
+++ b/sslh/sslh.conf
@@ -17,5 +17,4 @@ RUN=yes
 DAEMON=/usr/sbin/sslh
 
 DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --openvpn 127.0.0.1:995 --http 127.0.0.1:80 --pidfile /var/run/sslh/sslh.pid"
-
-#DAEMON_OPTS="--user sslh --listen 0.0.0.0:5222 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --pidfile /var/run/sslh/sslh.pid"
+DAEMON_OPTS="--user sslh --listen 0.0.0.0:443 --ssh 127.0.0.1:23 --ssl 127.0.0.1:955 --openvpn 127.0.0.1:995 --http 127.0.0.1:80 --pidfile /var/run/sslh/sslh.pid"
