--- a/stunnel4/stunnel.conf
+++ b/stunnel4/stunnel.conf
@@ -5,8 +5,12 @@ socket = l:TCP_NODELAY=1
 socket = r:TCP_NODELAY=1
 TIMEOUTclose = 0
 
-[openvpn]
+[openvpn1]
 accept = 995
+connect = 127.0.0.1:1194
+
+[openvpn2]
+accept = 43
 connect = 127.0.0.1:442
 
 [dropbear1]
