--- a/stunnel4/stunnel.conf
+++ b/stunnel4/stunnel.conf
@@ -5,6 +5,10 @@ socket = l:TCP_NODELAY=1
 socket = r:TCP_NODELAY=1
 TIMEOUTclose = 0
 
+[sslh]
+accept = 7443
+connect = 127.0.0.1:8443
+
 [openvpn1]
 accept = 995
 connect = 127.0.0.1:1194
