--- a/sslh/coba-sslh.conf
+++ b/sslh/coba-sslh.conf
@@ -10,7 +10,7 @@ protocols:
      { name: "ssh"; service: "ssh"; host: "localhost"; port: "9292"; keepalive: true; fork: true; tfo_ok: true },
      { name: "tls"; host: "localhost"; port: "443"; tfo_ok: true },
      { name: "openvpn"; host: "localhost"; port: "1195"; tfo_ok: true },
-     #{ name: "xmpp"; host: "localost"; port: "5222"; tfo_ok: true },
+     #{ name: "xmpp"; host: "localhost"; port: "5222"; tfo_ok: true },
      #{ name: "http"; host: "localhost"; port: "80"; tfo_ok: true },
      #{ name: "anyprot"; host: "localhost"; port: "443"; tfo_ok: true },
 );
