--- a/sslh/coba-sslh.conf
+++ b/sslh/coba-sslh.conf
@@ -1,13 +1,13 @@
 timeout: 2;
 listen:
 (
-    { host: "prismplex-server"; port: "443"; },
-    { host: "prismplex-server"; port: "80"; }
+    { host: ""; port: "443"; },
+    { host: ""; port: "80"; }
 );
 
 protocols:
 (
-     { name: "ssh"; service: "ssh"; host: "localhost"; port: "9292"; keepalive: true; fork: true; tfo_ok: true },
+     { name: "ssh"; service: "ssh"; host: "localhost"; port: "22"; keepalive: true; fork: true; tfo_ok: true },
      { name: "tls"; host: "localhost"; port: "443"; tfo_ok: true },
      { name: "openvpn"; host: "localhost"; port: "1195"; tfo_ok: true },
      #{ name: "xmpp"; host: "localhost"; port: "5222"; tfo_ok: true },
