--- a/sslh/coba-sslh.conf
+++ b/sslh/coba-sslh.conf
@@ -1,8 +1,8 @@
 timeout: 2;
 listen:
 (
-    { host: ""; port: "443"; },
-    { host: ""; port: "80"; }
+    { host: "0.0.0.0"; port: "443"; },
+    { host: "0.0.0.0"; port: "80"; }
 );
 
 protocols:
