--- a/sslh/coba-sslh.conf
+++ b/sslh/coba-sslh.conf
@@ -1,4 +1,8 @@
 timeout: 2;
+foreground: true;
+inetd: false;
+user: "sslh";
+pidfile: "/var/run/sslh.pid";
 listen:
 (
     { host: "0.0.0.0"; port: "443"; },
