--- a/sslh/sslh.conf
+++ b/sslh/sslh.conf
@@ -17,4 +17,4 @@ RUN=yes
 DAEMON=/usr/sbin/sslh
 
 #DAEMON_OPTS="--user sslh --listen 0.0.0.0:80 --ssh 127.0.0.1:23 --tls 127.0.0.1:7443 --openvpn 127.0.0.1:1194 --http 127.0.0.1:880 --pidfile /var/run/sslh/sslh.pid"
-DAEMON_OPTS="-F /etc/sslh.cfg"
+DAEMON_OPTS="-F /etc/sslh/sslh.cfg"
