--- a/sslh/sslh.cfg
+++ b/sslh/sslh.cfg
@@ -10,12 +10,13 @@ pidfile: "/var/run/sslh.pid";
 
 
 # Change hostname with your external address name, or the IP
-# of the interface that receives connections
 listen:
 (
-    { host: "0.0.0.0"; port: "443"; }
+    { host: "0.0.0.0"; port: "443"; },
+    { host: "0.0.0.0"; port: "80"; keepalive: true; },
+    { host: "0.0.0.0"; is_udp: true; port: "80" }
+    { host: "0.0.0.0"; is_udp: true; port: "443" }
 );
-
 
 # Change to the protocols you want to forward to. The
 # defaults here are sensible for services running on
@@ -27,5 +28,5 @@ protocols:
      { name: "xmpp"; host: "localhost"; port: "5222"; },
      { name: "http"; host: "localhost"; port: "8880"; },
      { name: "tls"; host: "localhost"; port: "443"; log_level: 0; },
-     { name: "anyprot"; host: "localhost"; port: "443"; }
+     { name: "anyprot"; host: "localhost"; port: "23"; }
 );
