--- a/sslh/sslh.cfg
+++ b/sslh/sslh.cfg
@@ -1,13 +1,8 @@
 # This is a basic configuration file that should provide
-# sensible values for "standard" setup.
-
-# You will find extensive examples with explanations in
-# example.cfg
 
 timeout: 2;
 user: "nobody";
 pidfile: "/var/run/sslh.pid";
-
 
 # Change hostname with your external address name, or the IP
 listen:
@@ -18,14 +13,12 @@ listen:
     { host: "0.0.0.0"; is_udp: true; port: "443" }
 );
 
-# Change to the protocols you want to forward to. The
-# defaults here are sensible for services running on
-# localhost
+# Change to the protocols you want to forward to. 
 protocols:
 (
      { name: "ssh"; service: "ssh"; host: "localhost"; port: "22"; fork: true; },
      { name: "tls"; host: "localhost"; port: "443"; log_level: 0; },
-     { name: "http"; host: "localhost"; port: "8880"; },
+     { name: "http"; host: "localhost"; port: "880"; },
      { name: "openvpn"; host: "localhost"; port: "1194"; },      
      { name: "anyprot"; host: "localhost"; port: "23"; }
 );
