--- a/sslh/sslh.cfg
+++ b/sslh/sslh.cfg
@@ -9,7 +9,7 @@ listen:
 (
     { host: "0.0.0.0"; port: "443"; },
     { host: "0.0.0.0"; port: "80"; keepalive: true; },
-    { host: "0.0.0.0"; is_udp: true; port: "80" }
+    { host: "0.0.0.0"; is_udp: true; port: "80" },
     { host: "0.0.0.0"; is_udp: true; port: "443" }
 );
 
