--- a/sslh/sslh.cfg
+++ b/sslh/sslh.cfg
@@ -8,17 +8,17 @@ pidfile: "/var/run/sslh.pid";
 listen:
 (
     { host: "0.0.0.0"; port: "443"; },
-    { host: "0.0.0.0"; port: "80"; keepalive: true; },
-    { host: "0.0.0.0"; is_udp: true; port: "80" },
-    { host: "0.0.0.0"; is_udp: true; port: "443" }
+    { host: "0.0.0.0"; port: "80"; keepalive: true; }
+#    { host: "0.0.0.0"; is_udp: true; port: "80" },
+#    { host: "0.0.0.0"; is_udp: true; port: "443" }
 );
 
 # Change to the protocols you want to forward to. 
 protocols:
 (
-     { name: "ssh"; service: "ssh"; host: "localhost"; port: "22"; fork: true; },
+     { name: "ssh"; service: "ssh"; host: "localhost"; port: "23"; fork: true; },
      { name: "tls"; host: "localhost"; port: "7443"; log_level: 0; },
      { name: "http"; host: "localhost"; port: "880"; },
      { name: "openvpn"; host: "localhost"; port: "1194"; },      
-     { name: "anyprot"; host: "localhost"; port: "23"; }
+     { name: "anyprot"; host: "localhost"; port: "22"; }
 );
