--- a/sslh/sslh.cfg
+++ b/sslh/sslh.cfg
@@ -7,10 +7,10 @@ pidfile: "/var/run/sslh.pid";
 # Change hostname with your external address name, or the IP
 listen:
 (
-    { host: "0.0.0.0"; port: "443"; },
-    { host: "0.0.0.0"; port: "80"; keepalive: true; }
-#    { host: "0.0.0.0"; is_udp: true; port: "80" },
-#    { host: "0.0.0.0"; is_udp: true; port: "443" }
+#    { host: "0.0.0.0"; port: "443"; },
+#    { host: "0.0.0.0"; port: "80"; keepalive: true; },
+    { host: "0.0.0.0"; is_udp: true; port: "80" },
+    { host: "0.0.0.0"; is_udp: true; port: "443" }
 );
 
 # Change to the protocols you want to forward to. 
