--- a/stunnel4/stunnel.conf
+++ b/stunnel4/stunnel.conf
@@ -33,6 +33,10 @@ connect = 127.0.0.1:22
 accept = 587
 connect = 127.0.0.1:144
 
-[ws-openssh1]
+[ws-dropbear]
+accept = 8043
+connect = 127.0.0.1:8880
+
+[ws-openssh]
 accept = 8043
 connect = 127.0.0.1:8880
