--- a/PROXY/squid/squid4.conf
+++ b/PROXY/squid/squid4.conf
@@ -2,6 +2,10 @@
 http_port 3128
 http_port 8080
 
+#support HTTPS
+acl SSL_ports port 443
+http_access allow CONNECT SSL_ports
+
 # Konfigurasi autentikasi PAM
 auth_param basic program /usr/lib/squid/basic_pam_auth
 auth_param basic realm "PAM Authentication"
